# mothtools

./: Cargo.toml  README.md  rust-toolchain
crucible/: main.rs
crucible/doc/: components.crucible  crucible.pest
crucible/example/: components.crucible
crucible/parser/: aspect.rs  card.rs  core.crucible  crucible.grammar  crucible.pest  deck.rs  ending.rs  legacy.rs  mod.rs  string.rs  verb.rs
laidlaw/: deserialize.rs  main.rs  serialize.rs
mothlib/: lib.rs
mothlib/extensions/: mod.rs  quicktype.rs
mothlib/extensions/strongtype/: aspect.rs
mothlib/lantern/: json.rs  mod.rs  parser.rs
src/extensions/: pipeline.rs
src/extensions/strongtype/: mod.rs
src/lantern/: mod.rs
