[package]
name = "mothtools"
version = "0.2.8"
authors = ["Montessquio"]
homepage = "https://monty.sh/project/mothtools"
repository = "https://github.com/Montessquio/mothtools"
edition = "2021"
description = "A collection of command-line tools and libraries to assist in creating mods for the game Cultist Simulator"

[lib]
name = "mothlib"
path = "mothlib/lib.rs"

[[bin]]
name = "laidlaw"
path = "laidlaw/main.rs"
version = "0.2.5"

[[bin]]
name = "crucible"
path = "crucible/main.rs"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.18", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.21", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.36"
tracing-subscriber = "0.3"
nu-json = "0.70.0"
serde_json = "1.0"
walkdir = "2"
async-trait = "0.1"
color-eyre = "0.6"
pest = "2.0"
pest_derive = "2.0"
regex = "1"
either = { version = "1", features = ["serde"] }